[package]
name = "nuklear-sys"
version = "1.33.2"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
description = "Raw bindings to Nuklear 2D GUI library"
homepage = "https://github.com/snuk182/nuklear-rust"
repository = "https://github.com/snuk182/nuklear-rust"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "nuklear"

[lib]
name = "nuklear_sys"
path = "src/lib.rs"

[dependencies]
libc = "~0.2"

[build-dependencies]
gcc = "~0.3"