[package]
name = "nuklear-sys"
version = "4.6.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
description = "Raw bindings to Nuklear 2D GUI library"
homepage = "https://github.com/snuk182/nuklear-rust"
repository = "https://github.com/snuk182/nuklear-rust"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "nuklear"
edition = "2018"

[lib]
name = "nuklear_sys"
path = "src/lib.rs"

[dependencies]
libc = "^0.2.76"

[build-dependencies]
cc = "^1.0.59"
bindgen = "^0.55.1"
